@startuml Observer_Pattern
title Observer Pattern - Sistema de Monitoreo de Análisis

' Render sin Graphviz (evita error del dot)
!pragma layout smetana

interface ObservadorAnalisis {
  +actualizar(resultado: ResultadoAnalisis): void
}

class GestorObservadores {
  -observadores: list
  +registrarObservador(observador: ObservadorAnalisis): void
  +desregistrarObservador(observador: ObservadorAnalisis): void
  +notificarObservadores(resultado: ResultadoAnalisis): void
}

class ResultadoAnalisis {
  +id_analisis: String
  +texto: String
  +puntaje: float
  +riesgo_nivel: String
  +recomendacion: String
  +timestamp: datetime
}

class LoggerAnalisis {
  +log_file: String
  +actualizar(resultado: ResultadoAnalisis): void
}

class AlertaRiesgoAlto {
  +email_admin: String
  +actualizar(resultado: ResultadoAnalisis): void
}

class ObservadorCustomizado {
  +nombre: String
  +actualizar(resultado: ResultadoAnalisis): void
}

class AdministradorAnalisisTexto {
  -gestor: GestorObservadores
  +AdministradorAnalisisTexto(g: GestorObservadores)
  +analizar(texto: String): ResultadoAnalisis
  -notificarResultado(resultado: ResultadoAnalisis): void
}

' Observers implementan la interfaz
LoggerAnalisis ..|> ObservadorAnalisis
AlertaRiesgoAlto ..|> ObservadorAnalisis
ObservadorCustomizado ..|> ObservadorAnalisis

' Gestor mantiene (agrega) observadores
GestorObservadores o-- "0..*" ObservadorAnalisis : suscriptores

' Administrador usa el gestor para notificar
AdministradorAnalisisTexto o-- GestorObservadores : usa

' Resultado se usa como dato (dependencia)
GestorObservadores ..> ResultadoAnalisis : notifica

note right of GestorObservadores
Patrón Observer implementa:
- Notificación automática a observadores
- Desacoplamiento publicador/suscriptores
- Múltiples observadores concurrentes
end note

@enduml
